--- a/SmHm.WebApi/appsettings.Development.json
+++ b/SmHm.WebApi/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "SmartHomeDbContext": "Host=localhost;Database=SmartHomeDb;Username=postgres;Password=140779"
+  },
+  "JwtOptions": {
+    "SecretKey": "140779secretkeyforjwtauthsecret140779keykeysecretkey",
+    "Audience": "audience",
+    "Issuer": "issuer",
+    "ExpiresHours": "12"
   }
 }
