--- a/SmHm.Application/SmHm.Application.csproj
+++ b/SmHm.Application/SmHm.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SmHm.Persistence.PostgreSql\SmHm.Persistence.PostgreSql.csproj" />
   </ItemGroup>
 
