--- a/SmHm.WebApi/appsettings.Development.json
+++ b/SmHm.WebApi/appsettings.Development.json
@@ -6,8 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SmartHomeDbContext": "Host=localhost;Database=SmartHomeDb;Username=postgres;Password=140779",
-    "DockerConnection": "Host=db;Database=SmartHomeDb;Username=postgres;Password=140779"
+    "SmartHomeDbContext": "Host=localhost;Database=SmartHomeDb;Username=postgres;Password=140779"
   },
   "JwtOptions": {
     "SecretKey": "140779secretkeyforjwtauthsecret140779keykeysecretkey",
