--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,31 @@
-version: '3.8'
-
 services:
   smhmwebapi:
     build:
-      context: .
-      dockerfile: Dockerfile
+        context: .
+        dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+        - "8080:8080"
     container_name: smhm_web_api
     depends_on:
-      - db
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Production
-      - ConnectionStrings__SmartHomeDbContext=Host=db;Database=smhm_database;Username=postgres;Password=140779
-      
+     db:
+      condition: service_healthy
+
   db:
-    image: postgres:latest
+    image: postgres:17
     ports:
-      - "5432:5432"
+        - "5432:5432"
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 140779
-      POSTGRES_DB: smhm_database
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: 140779
+        POSTGRES_DB: smhm_database
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     volumes:
-      - db_data:/var/lib/postgresql/data
+        - db_data:/var/lib/postgresql/data
     container_name: db_postgresql_container
 
 volumes:
-  db_data:
+    db_data:
