--- a/SmHm.WebApi/appsettings.json
+++ b/SmHm.WebApi/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SmartHomeDbContext": "Host=localhost;Database=smhm_database;Username=postgres;Password=140779",
+    "DockerConnection": "Host=db;Database=smhm_database;Username=postgres;Password=140779"
+  },
+  "JwtOptions": {
+    "SecretKey": "140779secretkeyforjwtauthsecret140779keykeysecretkey",
+    "Audience": "audience",
+    "Issuer": "issuer",
+    "ExpiresHours": "12"
+  },
   "AllowedHosts": "*"
 }
