add ioptions with rabbitmq spec

--- a/SmHm.NotificationService/appsettings.json
+++ b/SmHm.NotificationService/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "RabbitMqOptions": {
+    "HostName": "localhost",
+    "UserName": "rmuser",
+    "Password": "rmpassword"
   }
 }
