--- a/SmHm.WebApi/appsettings.json
+++ b/SmHm.WebApi/appsettings.json
@@ -14,5 +14,10 @@
     "Issuer": "issuer",
     "ExpiresHours": "12"
   },
+  "RabbitMqOptions": {
+    "HostName": "localhost",
+    "UserName": "rmuser",
+    "Password": "rmpassword"
+  },
   "AllowedHosts": "*"
 }
