--- a/SmHm.Application/SmHm.Application.csproj
+++ b/SmHm.Application/SmHm.Application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SmHm.Contracts\SmHm.Contracts.csproj" />
     <ProjectReference Include="..\SmHm.Persistence.PostgreSql\SmHm.Persistence.PostgreSql.csproj" />
   </ItemGroup>
 
